
2010-04-25
Initial project in ajcodekatas
Lexer with initial tests
Parser.ParseExpression with tests
IObject, IoObject with tests
ClonedObject
Message, IMethod
CloneMethod
Machine initial implementation
AjIo.Console
IObject.Evaluate
IObject.Process with context
EvaluationTests

2010-04-26
LocalObject with tests
New Message.Send instead IObject.Process
BaseMethod
MethodMethod, Method with evaluation tests
IObject.Self with tests
UpdateSlotMethod
Assigment operators WIP
Fixing EvaluationTest.EvaluateMany
New prompts in AjIo.Console

2010-04-27
IMessage abstraction
First steps in arithmetic methods
First steps in native object methods
Native object WIP
Add integers with tests WIP
Sub integers