@@ -4,7 +4,6 @@
 
     public interface IMessage
     {
-        object Send(IObject context, IObject receiver);
         object Send(IObject context, object receiver);
     }
 }
